--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "babel-register": "^6.24.0",
     "body-parser": "^1.17.2",
     "config": "^1.26.1",
-    "config-node": "^1.3.0",
-    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
-    "express-session": "^1.15.3",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.10.4"
   },
   "devDependencies": {
