--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "body-parser": "^1.17.2",
     "config": "^1.26.1",
     "express": "^4.15.3",
+    "formidable": "^1.1.1",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.10.4"
+    "mongoose": "^4.10.4",
+    "node-fetch": "^1.7.1",
+    "time-formater": "^1.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
